Calendar for notes: Description height shortens to avoid white space. re #448

--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -309,7 +309,7 @@
                     }
                     .note-description {
                         p {
-                            min-height:51px;
+                            max-height:1024px;
                             height:auto;
                         }
                         .related-events {
@@ -398,7 +398,7 @@
                     }
                     .note-description {
                         p {
-                            height:51px;
+                            max-height:51px;
                             overflow-y:hidden;
                         }
                         margin-bottom:0;
